--- a/with_assertions/Cargo.toml
+++ b/with_assertions/Cargo.toml
@@ -8,3 +8,10 @@ flux-rs = { git  = "https://github.com/flux-rs/flux.git" }
 
 [package.metadata.flux]
 enabled = true
+
+[profile.release]
+panic = "abort"
+lto = true
+opt-level = "z"
+debug = true
+codegen-units = 1
