--- a/with_assertions/Cargo.toml
+++ b/with_assertions/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 flux-rs = { git  = "https://github.com/flux-rs/flux.git" }
+flux-core = { path = "/Users/acheung/research/projects/flux/lib/flux-core" }
 
 [package.metadata.flux]
 enabled = true
+no_panic = true
 
 [profile.release]
 panic = "abort"
@@ -15,3 +17,6 @@ lto = true
 opt-level = "z"
 debug = true
 codegen-units = 1
+
+[profile.dev]
+panic = "abort"
